--- a/speechSynth.html
+++ b/speechSynth.html
@@ -32,6 +32,16 @@
       <button>Press to Talk</button>
     </section>
   </main>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0D1LXSDBV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0D1LXSDBV8');
+</script>
 </body>
 
 </html>
