--- a/speechSynth.html
+++ b/speechSynth.html
@@ -13,6 +13,16 @@
   <script src="assets/scripts/speechSynth.js" type="module"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0D1LXSDBV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0D1LXSDBV8');
+</script>
+
 <body>
   <header>
     <nav>
