--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
  
 <!-- Google tag (gtag.js) -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TFJM4HZR');</script>
+  <!-- End Google Tag Manager -->
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0D1LXSDBV8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,6 +20,8 @@
 
   gtag('config', 'G-0D1LXSDBV8');
 </script>
+
+
 
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,6 +40,10 @@
 
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFJM4HZR"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <header>
     <nav>
       <a href="speechSynth.html" title="Go to speech synthesizer">Speech Synthesizer</a>
