--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   })(window,document,'script','dataLayer','GTM-TFJM4HZR');</script>
   <!-- End Google Tag Manager -->
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0D1LXSDBV8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TXJ5ZXKYF1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0D1LXSDBV8');
+  gtag('config', 'G-TXJ5ZXKYF1');
 </script>
 
 
